# some-repo

./: .angular-cli.json  .bazelrc  .gitignore  .npmignore  .yo-rc.json  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  README.MD  Staticfile  WORKSPACE  angular-playground.json  angular.json  bazel-out  gulpfile.js  manifest-common.yml  manifest-demo.yml  manifest-dev.yml  manifest-prod-atl.yml  manifest-prod-mia.yml  package-lock.json  package.json  sonar-project.properties  stylelint.config.js  tsconfig.json
src/: BUILD.bazel  app.component.ts  index.html  index.ts  jest-global-mocks.ts  main.playground.ts  package.json  playground.module.ts  polyfills.ts  styles.scss  tsconfig.es5.json  tsconfig.spec.json
src/accessibility/: accessibility-context-menu.directive.spec.ts  accessibility-list-item-role.directive.spec.ts  accessibility-tooltip.directive.spec.ts  accessibility.directive.spec.ts  accessibility.directive.ts  accessible-click.directive.spec.ts  accessible-remove-view.directive.spec.ts  accessible-view.directive.spec.ts
src/autocomplete-places/: README.md  autocomplete-places.component.sandbox.ts  autocomplete-places.component.ts  autocomplete-places.component.unit.spec.ts  autocomplete-places.html  autocomplete-places.module.ts  autocomplete-places.service.ts  autocomplete-service.mock.ts  autocomplete-service.provider.ts  index.ts
src/avatar/: README.md  avatar.component.sandbox.ts  avatar.component.scss  avatar.component.spec.ts  avatar.component.ts  avatar.component.unit.spec.ts  avatar.html  avatar.md
src/avatar-group/: README.md  avatar-group.component.html  avatar-group.component.sandbox.ts  avatar-group.component.scss  avatar-group.component.spec.ts  avatar-group.component.ts  avatar-group.component.unit.spec.ts  avatar-group.html  avatar-group.md  avatar-group.types.ts  avatars.mock.ts
src/button-group/: README.md  button-group.component.spec.ts  button-group.md  index.ts
src/buttons/: README.md  buttons.md
src/card/: README.md  card.md  index.ts
src/center/: README.md  center.component.spec.ts  center.md  center.scss
src/checkbox/: README.md  checkbox.md
src/contribution/: README.md  contribution.md
src/currency-input/: README.md
src/currency-input-mask/: README.md  currency-input-mask.md
src/data-table-container/: README.md  data-table-container.component.html  data-table-container.component.spec.ts  data-table-container.component.ts  data-table-container.md  data-table-container.module.ts  data-table-container.scss
src/date-pickers/: README.md  date-pickers.md
src/date-range/: README.md  date-range.component.spec.ts  date-range.component.ts  date-range.component.unit.spec.ts  date-range.html  date-range.md  date-range.module.ts
src/dialog/: README.md  dialog-accept-cancel.md  dialog-dialog-background.md  dialog-dialog.md  dialog.md
src/divider/: divider.component.spec.ts  divider.component.ts  divider.md  divider.scss  readme.md
src/empty-state/: README.md  empty-state-description.component.spec.ts  empty-state-description.scss  empty-state-image.component.spec.ts  empty-state-title.component.spec.ts  empty-state-title.scss  empty-state.component.sandbox.ts  empty-state.component.spec.ts  empty-state.component.ts  empty-state.md  empty-state.scss
src/error-banner/: README.md  error-banner.component.spec.ts  error-banner.component.ts  error-banner.md  error-banner.sandbox.ts  error-banner.scss
src/expandable-fab/: README.md  expandable-fab-item.component.spec.ts  expandable-fab-item.component.ts  expandable-fab-item.html  expandable-fab-item.module.ts  expandable-fab-item.scss  expandable-fab.component.spec.ts  expandable-fab.component.ts  expandable-fab.html  expandable-fab.md  expandable-fab.sandbox.ts
src/expandable-search/: README.md  expandable-search.component.spec.ts  expandable-search.component.ts  expandable-search.html  expandable-search.md  expandable-search.scss
src/field/: field.component.sandbox.ts  field.component.scss  field.component.spec.ts  field.component.ts  field.md  readme.md
src/footer/: README.md  footer.component.spec.ts  footer.component.ts  footer.md  footer.scss
src/form/: README.md  form.md  index.ts
src/geocoder/: address-transform.service.ts  geocoder.mock.ts  geocoder.module.ts  geocoder.provider.ts  geocoder.service.ts  types.ts
src/helpers/: google-callback-wrapper.spec.ts  google-callback-wrapper.ts
src/hub-card/: hub-card.component.spec.ts  hub-card.component.ts  hub-card.html  hub-card.md  hub-card.scss
src/icon/: README.md  icon.md
src/info-banner/: README.md  info-banner.component.spec.ts  info-banner.html  info-banner.md  info-banner.sandbox.ts  info-banner.scss
src/input-mask/: input-mask.component.ts  input-mask.html
src/list-content/: README.md  index.ts  list-content.component.spec.ts  list-content.component.ts  list-content.html  list-content.md  list-content.scss
src/list-item/: list-container.component.spec.ts  list-item-content.component.spec.ts  list-item.component.sandbox.ts  list-item.component.spec.ts  list-item.component.ts  readme.md
src/list-search/: README.md  list-search.component.html  list-search.component.scss  list-search.component.spec.ts  list-search.component.ts  list-search.md
src/list-selection/: README.md  index.ts  list-selection.component.spec.ts  list-selection.component.ts  list-selection.scss
src/loading-container/: README.md  loading-container.component.spec.ts  loading-container.component.ts  loading-container.html  loading-container.md  loading-container.scss
src/localization/: translation-map.ts  translation.directive.spec.ts  translation.directive.ts  translation.module.ts  translation.pipe.ts  translation.pipe.unit.spec.ts  translation.service.ts  translation.service.unit.spec.ts
src/logging/: console-polyfill.unit.spec.ts  logger.service.ts  logger.service.unit.spec.ts
src/messages/: messages.component.scss  messages.component.spec.ts  messages.component.ts  messages.component.unit.spec.ts
src/nav-list/: README.md  nav-list.component.spec.ts  nav-list.component.ts  nav-list.md  nav-list.module.ts
(+1026 files in other folders)
