package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

sass_library(
    name = "material",
    srcs = ["@npm//node_modules/@angular/material:_theming.scss"],
)

sass_binary(
    name = "styles",
    src = "styles.scss",
    deps = [
        ":material",
    ],
)
