load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_nodejs//:defs.bzl", "history_server", "rollup_bundle")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite", "ts_config", "ts_devserver")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig-app",
    src = "tsconfig.app.json",
    deps = ["//:tsconfig.json"]
)
