load("@angular//:index.bzl", "ng_module", "ng_package")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "playground",
    srcs = glob(
        include = ["**/*.ts"],
        exclude= [
            "test.ts",
            "main.ts",
            "polyfills.ts",
            "**/*.spec.ts"
        ]
    ),
    assets = glob(["**/*.html", "**/*.css"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "//projects/ign/src:ignite-system"
        ]
)
