load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "library",
    srcs = ["ign.module.ts"],
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "@angular//packages/forms",
        "@npm//angular-playground",
        "@angular//packages/core",
        "@angular//packages/common",
        "@angular//packages/router",
        "@angular_material//src/lib:material",
        "//projects/ign/src/lib/messages:messages",
        "//projects/ign/src/lib/error-banner:error-banner",
        "//projects/ign/src/lib/logging:logging",
        "//projects/ign/src/lib/currency-input-mask/currency-mask:currency-mask-module",
        "//projects/ign/src/lib/currency-input-mask/base-input-mask:base-input-mask-module",
        "//projects/ign/src/lib/localization:localization-translation-module",
        "//projects/ign/src/lib/persistent-search:persistent-search-module",
        "//projects/ign/src/lib/right-align-container:right-align-container-module",
        "//projects/ign/src/lib/data-table-container:data-table-container-module",
        "//projects/ign/src/lib/text-list-item:text-list-item-module",
        "//projects/ign/src/lib/footer:footer-module",
        "//projects/ign/src/lib/loading-container:loading-container-module",
        "//projects/ign/src/lib/center:center-module",
        "//projects/ign/src/lib/expandable:expandable-module",
        "//projects/ign/src/lib/button-group:button-group-module",
        "//projects/ign/src/lib/info-banner:info-banner-module",
        "//projects/ign/src/lib/select-container:select-container-module",
        "//projects/ign/src/lib/text:text-module",
        "//projects/ign/src/lib/card:card",
        "//projects/ign/src/lib/list-selection:list-selection-module",
        "//projects/ign/src/lib/empty-state:empty-state-module",
        "//projects/ign/src/lib/list-content:list-content-module",
        "//projects/ign/src/lib/list-item:list-item-component",
        "//projects/ign/src/lib/sidenav:sidenav",
        "//projects/ign/src/lib/right-drawer:right-drawer-module",
        "//projects/ign/src/lib/page:page-component",
        "//projects/ign/src/lib/field:field-module",
        "//projects/ign/src/lib/expandable-search:expandable-search-module",
        "//projects/ign/src/lib/avatar-group:avatar-group-module",
        "//projects/ign/src/lib/avatar:avatar",
        "//projects/ign/src/lib/accessibility:accessibility-module",
        "//projects/ign/src/lib/form:form",
        "//projects/ign/src/lib/form/form-group:form-group-module",
        "//projects/ign/src/lib/form/form-sizing:form-sizing",
        "//projects/ign/src/lib/form/nestable-form:nestable-form",
    ],
)
