load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "style",
    src = "footer.scss",
)

ng_module(
    name = "footer-module",
    srcs = [
        "footer.module.ts",
        "footer.component.ts",
    ],
    assets = [":footer.css", "footer.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "@angular//packages/core",
        "@angular//packages/common",
    ]
)
