load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "style",
    src = "info-banner.scss",
)

ng_module(
    name = "info-banner-module",
    srcs = [
        "info-banner.module.ts",
        "info-banner.component.ts",
    ],
    assets = [":info-banner.css", "info-banner.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "@angular//packages/core",
        "@angular//packages/common",
    ]
)
