load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "style",
    src = "loading-container.scss",
)

ng_module(
    name = "loading-container-module",
    srcs = [
        "loading-container.module.ts",
        "loading-container.component.ts",
    ],
    assets = [":loading-container.css", "loading-container.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "@angular//packages/core",
        "@angular//packages/common",
        "@angular_material//src/lib:material",
        "//projects/ign/src/lib/localization:localization-translation-module"
    ]
)
