load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "style",
    src = "messages.component.scss",
)

ng_module(
    name = "messages",
    srcs = [
        "messages.module.ts",
        "messages.component.ts",
    ],
    assets = [":messages.component.css"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "@angular//packages/core",
        "@npm//@angular/material",
        "@angular//packages/router",
        "@angular//packages/common",
        "//projects/ign/src/lib/messages/types:types",
        "//projects/ign/src/lib/logging:logging",
        "//projects/ign/src/lib/error-banner:error-banner"
    ]
)
