load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "style",
    src = "right-align-container.scss",
)

ng_module(
    name = "right-align-container-module",
    srcs = [
        "right-align-container.module.ts",
        "right-align-container.component.ts",
    ],
    assets = [
        ":right-align-container.css",
        "right-align-container.html"
        ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//tslib",
        "@npm//@types",
        "@angular//packages/core",
        "@angular//packages/common",
    ]
)
